# seedcase-flower

./: .copier-answers.yml  CITATION.cff  CONTRIBUTING.md  LICENSE.md  README.md  README.qmd  _metadata.yml  _publish.yml  _quarto.yml  justfile  pyproject.toml
.github/workflows/: release-package.yml
docs/includes/: site-counter.html
