[project]
name = "seedcase-flower"
version = "0.1.0"
# TODO: Add a description of the package.
description = ""
authors = [
  {name = "Luke W. Johnston", email = "lwjohnst@gmail.com" },
  {name = "Signe Kirk Brødbæk", email = "signekb@clin.au.dk" },
  {name = "Marton Vago", email = "marton.vago95@gmail.com" },
  {name = "Joel Ostblom", email = "joel@joelostblom.com" },
]
maintainers = [
  {name = "Luke W. Johnston", email = "lwjohnst@gmail.com" },
  {name = "Signe Kirk Brødbæk", email = "signekb@clin.au.dk" },
  {name = "Marton Vago", email = "marton.vago95@gmail.com" },
  {name = "Joel Ostblom", email = "joel@joelostblom.com" },
]
readme = "README.md"
license = "MIT"
license-files = ["LICENSE.md"]
# TODO: Not sure what keywords to add here.
keywords = [
  "frictionless",
  "metadata display",
  "data package",
  "data package documentation",
  "data package website",
]
requires-python = ">=3.12"
dependencies = []

[project.urls]
homepage = "https://flower.seedcase-project.org"
repository = "https://github.com/seedcase-project/seedcase-flower"
changelog = "https://github.com/seedcase-project/seedcase-flower/blob/main/CHANGELOG.md"
issues = "https://github.com/seedcase-project/seedcase-flower/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "bandit>=1.9.2",
    "commitizen>=4.10.0",
    "genbadge>=1.1.3",
    "jupyter>=1.1.1",
    "mypy>=1.19.0",
    "pre-commit>=4.5.0",
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
    "quartodoc>=0.11.1",
    "ruff>=0.14.7",
    "types-tabulate>=0.9.0.20241207",
    "typos>=1.40.0",
    "vulture>=2.14",
]
